--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="version_1_0">Version: 1.0</string>
     <string name="help">Help</string>
     <string name="height">Height: 5\' 10\"</string>
+    <string name="website_arjunaggarwal99_github_io">Website: arjunaggarwal99.github.io</string>
+    <string name="version_2_0">Version: 2.0</string>
 </resources>
