Adding saved instance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="height">Height: 5\' 10\"</string>
     <string name="website_arjunaggarwal99_github_io">Website: arjunaggarwal99.github.io</string>
     <string name="version_2_0">Version: 2.0</string>
+    <string name="statistics">Statistics</string>
 </resources>
